# sla-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: docker-publish.yml
prober/: Dockerfile  README.md  pyproject.toml
prober/src/prober/: __main__.py  cleanup.py  client.py  config.py  health.py  models.py  reporter.py  runner.py  scheduler.py
prober/src/prober/probes/: dns.py  http.py  ping.py  ssl.py  tcp.py
prober/tests/: conftest.py  test_cleanup.py  test_client.py  test_config.py  test_integration.py  test_reporter.py  test_runner.py  test_scheduler.py
prober/tests/probes/: test_dns.py  test_http.py  test_ping.py  test_ssl.py  test_tcp.py
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(dashboard)/: layout.tsx
src/app/status-page/: page.tsx
src/components/charts/: activity-timeline.tsx  advanced-kpis.tsx  incident-heatmap.tsx  response-time-chart.tsx  service-uptime-chart.tsx  stats-card.tsx  top-issues.tsx  uptime-gauge.tsx
src/components/dashboard/: widget-system.tsx
src/components/layout/: header.tsx  (+1 more)
src/lib/: api-helpers.ts  crypto.ts  db.ts  internal-types.ts  latency-trend.ts  maintenance.ts  seed-data.ts  settings.ts  utils.ts  window.ts
src/stores/: app-store.ts  auth-store.ts
src/types/: index.ts
tests/api/: internal-cleanup.test.ts  settings-general.test.ts  settings-retention.test.ts
tests/lib/: maintenance.test.ts  prober-token.test.ts  settings.test.ts  window.test.ts
(+65 files in other folders)
