[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prober"
version = "0.1.0"
description = "SLA Monitor probing service"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "dnspython>=2.6",
  "structlog>=24.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpserver>=1.0",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
